# node-svgcleaner

./: .gitignore  .travis.yml  README.md  package-lock.json  package.json
lib/: extensions.js  index.js
native/: Cargo.toml
native/src/: lib.rs  options.rs
