[package]
name = "node-svgcleaner"
version = "0.1.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_svgcleaner"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
svgcleaner = { version = "0.9.5", default-features = false }
svgdom = "0.10.5"
neon = "0.3.3"
neon-serde = "0.3.0"
serde = { version = "1", features = ["derive"] }

